# football

./: .gitignore  Cargo.toml  README.md  config.yaml  requirements.txt  rl_experiment.ipynb
.github/workflows/: rust.yml
ai/: __init__.py  config.py  main.py
ai/transports/: __init__.py  socket_transport.py
setup/: README.md
src/: README.md  _redis.rs  agent.rs  ball.rs  config.rs  gameobject.rs  gamestate.rs  getstate.rs  lib.rs  main.rs  pitch.rs  player.rs  position.rs  render.rs  team.rs  visibleplayer.rs  window.rs
src/transports/: base.rs  mod.rs  tcp_transport.rs
