[package]
name = "football"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
macroquad = "0.4.4"
redis = { version = "0.25.3", optional=true }
serde = { version="1.0.199", features=["derive"] }
serde_json ="1.0.116" 
uuid = { version="1.8.0", features=["v4"] }
getrandom = { version = "0.2.14", features = ["js"] }
serde_yaml = "0.9.34"

[features]
use_redis = ["redis", "uuid/fast-rng"]
